# vlc

./: .gitignore  .mailmap  AUTHORS  NEWS  README  config.h.meson  configure.ac  meson.build  meson_options.txt
doc/libvlc/: CMakeLists.txt  appkit_player.m  d3d11_player.cpp  d3d9_player.c  example.c  screen_player.cpp  sdl_opengl_player.cpp  thumbnailer.c  win_player.c  wx_player.cpp
modules/: Cargo.toml  Makefile.am  libtool_cargo.sh  meson.build
modules/access/: Makefile.am  alsa.c  amt.c  avaudiocapture.m  avcapture.m  avio.c  avio.h  bluray.c  cache.c  cache.h  cdda.c  concat.c  data.c  dc1394.c  decklink.cpp  directory.c  disc_helper.h  dv.c  dvdnav.c  dvdread.c  emjsfile.c  file.c  fs.c  fs.h  ftp.c  gopher.c  http.c  idummy.c  imem-access.c  imem-d3d11.cpp  imem.c  jack.c  live555.cpp  live555_dtsgen.h  meson.build  mtp.c  nfs.c  oss.c  pulse.c  rdp.c  (+22 more)
modules/access_output/: Makefile.am  dummy.c  file.c  http-put.c  http.c  livehttp.c  rist.c  shout.c  srt.c
modules/audio_filter/: Makefile.am  audiobargraph_a.c  center.c  chorus_flanger.c  compressor.c  equalizer.c  equalizer_presets.h  gain.c  karaoke.c  libebur128.c  normvol.c  param_eq.c  rnnoise.c  scaletempo.c  speech_to_text.cpp  speech_to_text.h  speech_to_text.hpp  speech_to_text_vosk.h  speech_to_text_vosk.hpp  stereo_pan.c  stereo_widen.c
modules/audio_mixer/: float.c  integer.c
modules/audio_output/: Makefile.am  adummy.c  alsa.c  amem.c  audiotrack.c  audiounit_ios.m  auhal.c  coreaudio_common.c  coreaudio_common.h  directsound.c  file.c  jack.c  kai.c  mmdevice.c  mmdevice.h  mmdevice_player_volume.c  mmdevice_session_volume.c  mmdevice_volume_control.h  opensles_android.c  oss.c  pipewire.c  pulse.c  sndio.c  vlcpulse.c  vlcpulse.h  volume.h  wasapi.c  waveout.c  windows_audio_common.h  winstore.c
modules/codec/: Makefile.am  adpcm.c  aes3.c  aom.c  araw.c  atsc_a65.c  atsc_a65.h  audiotoolbox_midi.c  bpg.c  cc.c  cc.h  cdg.c  cea708.c  cea708.h  cvdsub.c  daala.c  dav1d.c  ddummy.c  dvbsub.c  edummy.c  faad.c  flac.c  fluidsynth.c  g711.c  hxxx_helper.c  hxxx_helper.h  hxxx_helper_testdec.c  jpeg.c  jpeg2000.h  kate.c  libass.c  libmpeg2.c  lpcm.c  meson.build  mft.cpp  mpg123.c  oggspots.c  opus.c  opus_header.c  opus_header.h  (+40 more)
modules/control/: Makefile.am  dummy.c  gestures.c  hotkeys.c  intromsg.h  lirc.c  motionlib.c  motionlib.h  netsync.c  ntservice.c  win_msg.c  win_smtc.cpp
modules/demux/: Makefile.am  aiff.c  au.c  av1_unpack.h  caf.c  cdg.c  demuxdump.c  directory.c  dmxmus.c  dvb-text.h  flac.c  gme.c  hx.c  image.c  meson.build  mjpeg.c  mock.c  mod.c  moving_avg.h  mpc.c  mxpeg_helper.h  nsv.c  nuv.c  ogg.c  ogg.h  ogg_granule.c  ogg_granule.h  oggseek.c  oggseek.h  opus.h  pva.c  rawaud.c  rawdv.c  rawdv.h  rawvid.c  smf.c  stl.c  subtitle.c  subtitle_helper.h  timestamps_filter.h  (+17 more)
modules/gui/: eject.c  ncurses.c
modules/keystore/: Makefile.am  file.c  file_crypt.h  file_crypt_android.c  file_crypt_win32.c  keychain.m  kwallet.c  list_util.c  list_util.h  memory.c  secret.c
modules/logger/: android.c  console.c  emscripten.c  file.c  journal.c  json.c  syslog.c
modules/lua/: Makefile.am  extension.c  extension.h  extension_thread.c  intf.c  libs.h  meta.c  services_discovery.c  stream_filter.c  vlc.c  vlc.h
modules/meta_engine/: ID3Genres.h  ID3Meta.h  ID3Tag.h  ID3Text.h  folder.c  taglib.cpp
modules/misc/: Makefile.am  audioscrobbler.c  fingerprinter.c  gnutls.c  securetransport.c  stats.c
modules/mux/: asf.c  av1_pack.h  avi.c  dummy.c  extradata.c  extradata.h  mpjpeg.c  muxvtt.c  ogg.c  wav.c
modules/notify/: notify.c  osx_notifications.m
modules/packetizer/: a52.c  a52.h  av1.c  av1.h  av1_obu.c  av1_obu.h  avparser.c  avparser.h  copy.c  dts.c  dts_header.c  dts_header.h  flac.c  flac.h  h264.c  h264_nal.c  h264_nal.h  h264_slice.c  h264_slice.h  hevc.c  hevc_nal.c  hevc_nal.h  hxxx_common.c  hxxx_common.h  hxxx_ep3b.h  hxxx_nal.c  hxxx_nal.h  hxxx_sei.c  hxxx_sei.h  iso_color_tables.h  mjpeg.c  mlp.c  mpeg4audio.c  mpeg4audio.h  mpeg4video.c  mpegaudio.c  mpegaudio.h  mpegvideo.c  mpegvideo.h  packetizer_helper.h  (+2 more)
modules/services_discovery/: Makefile.am  avahi.c  bonjour.m  meson.build  microdns.c  mtp.c  os2drive.c  podcast.c  pulse.c  sap.c  udev.c  udisks.c  upnp-wrapper.cpp  upnp-wrapper.hpp  upnp.cpp  upnp.hpp  windrive.c  xcb_apps.c
modules/spu/: Makefile.am  audiobargraph_v.c  auto_sub.cpp  common.h  logo.c  marq.c  mosaic.c  mosaic.h  rss.c  spu_stt.c  spu_stt.cpp  stt.c  subsdelay.c
modules/stream_extractor/: archive.c
modules/stream_filter/: Makefile.am  accesstweaks.c  adf.c  aribcam.c  cache_block.c  cache_read.c  decomp.c  inflate.c  meson.build  prefetch.c  record.c  skiptags.c
modules/stream_out/: Makefile.am  autodel.c  bridge.c  chromaprint.c  chromaprint_data.h  delay.c  display.c  dummy.c  duplicate.c  es.c  gather.c  hls.c  mosaic_bridge.c  record.c  renderer_common.cpp  renderer_common.hpp  rtcp.c  rtp.c  rtp.h  rtpfmt.c  rtsp.c  sdp_helper.c  sdp_helper.h  setid.c  smem.c  standard.c  stats.c  udp.c
modules/text_renderer/: nsspeechsynthesizer.m  sapi.cpp  svg.c  tdummy.c
modules/video_chroma/: Makefile.am  chain.c  copy.c  copy.h  cvpx.c  d3d11_fmt.c  d3d11_fmt.cpp  d3d11_fmt.h  d3d9_fmt.c  d3d9_fmt.h  dxgi_fmt.c  dxgi_fmt.h  grey_yuv.c  gst_mem.c  i420_nv12.c  i420_rgb.c  i420_rgb.h  i420_rgb16.c  i420_rgb16_x86.c  i420_rgb8.c  i420_rgb_c.h  i420_rgb_sse2.h  i420_yuy2.c  i420_yuy2.h  i422_i420.c  i422_yuy2.c  i422_yuy2.h  orient.c  orient.h  rv32.c  swscale.c  yuvp.c  yuy2_i420.c  yuy2_i422.c
modules/video_filter/: Makefile.am  adjust.c  adjust_sat_hue.c  adjust_sat_hue.h  alphamask.c  anaglyph.c  antiflicker.c  ball.c  blend.cpp  blendbench.c  bluescreen.c  canvas.c  ci_filters.m  colorthres.c  croppadd.c  edgedetection.c  egl_pbuffer.c  egl_surfacetexture.c  erase.c  extract.c  filter_event_info.h  filter_picture.h  formatcrop.c  fps.c  freeze.c  gaussianblur.c  gladjust.c  gradfun.c  gradient.c  grain.c  hqdn3d.c  invert.c  magnify.c  mirror.c  motionblur.c  motiondetect.c  oldmovie.c  opencv_example.cpp  (+15 more)
(+3446 files in other folders)
