[package]
name = "vlcrs-core-sys"
version = "0.1.0"
edition = "2021"
license = "LGPL-2.1-or-later"

[dependencies]
libc = "0.2"

[build-dependencies]
cc = "1.0"

[build-dependencies.bindgen]
git = "https://github.com/rust-lang/rust-bindgen.git"
rev = "a710e508c3e3fdff75884e3de2c43977cb9de558"
package = "bindgen"
features = ["experimental"]
